<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_register"
    >

    <TextView
        android:text="Email Address:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/email_edit_text_register"
        android:layout_alignStart="@+id/email_edit_text_register"
        android:id="@+id/email_text_register"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/email_text_register"
        android:layout_centerHorizontal="true"
        android:id="@+id/email_edit_text_register"
        />

    <TextView
        android:text="Password:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_edit_text_register"
        android:layout_marginTop="35dp"
        android:layout_alignLeft="@+id/password_edit_text_register"
        android:layout_alignStart="@+id/password_edit_text_register"
        android:id="@+id/password_text_register"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/password_text_register"
        android:layout_centerHorizontal="true"
        android:id="@+id/password_edit_text_register"
        />

    <TextView
        android:text="Confirm Password:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edit_text_register"
        android:layout_marginTop="35dp"
        android:layout_alignLeft="@+id/password_confirmation_edit_text_register"
        android:layout_alignStart="@+id/password_confirmation_edit_text_register"
        android:id="@+id/password_confirmation_text_register"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/password_confirmation_text_register"
        android:layout_centerHorizontal="true"
        android:id="@+id/password_confirmation_edit_text_register"
        />

    <Button
        android:id="@+id/register_button_register"
        android:text="Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_confirmation_edit_text_register"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:text="Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_button_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:visibility="invisible"
        android:textColor="@color/error"
        android:id="@+id/error_text_register" />


</RelativeLayout>