<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_dashboard">

    <Button
        android:id="@+id/button_deregister"
        android:text="Deregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp" />

    <Button
        android:id="@+id/button_entry"
        android:text="Add Entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_deregister"
        android:layout_alignBottom="@+id/button_deregister"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp" />

    <Button
        android:id="@+id/button_logout"
        android:text="Log out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_deregister"
        android:layout_alignEnd="@+id/button_deregister" />

</RelativeLayout>