<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.slashandhyphen.saplyn.Authentication.WelcomeFragment"
    android:id="@+id/fragment_welcome"
    >


    <Button
        android:text="Sign in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/login_button_welcome"
        />

    <Button
        android:text="Sign up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button_welcome"
        android:layout_alignRight="@+id/login_button_welcome"
        android:layout_alignEnd="@+id/login_button_welcome"
        android:id="@+id/register_button_welcome"
        />

</RelativeLayout>
